# OpenWeatherMapWrapper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
openweathermapwrapper/: api_client.py  clothing.py  weather.py
tests/: test_api_client.py  test_clothing.py  test_weather.py
