[tool.poetry]
name = "openweathermapwrapper"
version = "0.2.0"
description = "Uses the OpenWeatherMap API to fetch current weather and forecast data for a given city."
authors = ["The-WildWolf <ksenna.sitek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.1"
pre-commit = "^3.1.1"

[tool.commitizen]
name = "cz_conventional_commits"
version_files = [
    "pyproject.toml:^version",
]
update_changelog_on_bump = true
version = "0.2.0"


[tool.commitizen_changelog]
tag_format = "v$version"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
